--- a/src/planets.tex
+++ b/src/planets.tex
@@ -35,7 +35,7 @@ simple steps in the order given below.
     \begin{adjustbox}{width=10cm,center}
       \surface{planets/planet1Charset_Random_Step1.png}
     \end{adjustbox}
-  }\caption[]{\textbf{Step One}: Add the sea across the entire surface\index{surface} of the planet\index{planet}.}
+  }\caption[]{\textbf{Step One}: Add the sea across the entire surface\index{surface} of the planet\index{planet}, 1024 bytes long.}
 \end{figure}
 
 \begin{figure}[H]
