--- a/src/preface.tex
+++ b/src/preface.tex
@@ -14,7 +14,7 @@ from the game binary Jeff Minter \href{https://www.llamasoftarchive.org/oldsite/
 reverse-engineering process in the opening chapters because I think it is an interesting exercise in and of it self to go from
 a binary blob to a set of fully commented source code that provides insight to the inner workings of the game. 
 \hyperref[sec:archaeo]{\textcolor{blue}{A Little Archaeology}} describes how we extract the game binary from the cassette
-tape it was originally distributed. \hyperref[sec:disassembly]{\textcolor{blue}{Some Disassembly Required}} shows you how to go from 
+tape on which it was originally distributed. \hyperref[sec:disassembly]{\textcolor{blue}{Some Disassembly Required}} shows you how to go from 
 a very long list of bytes to a full source code listing. Hopefully you are here because you enjoy this kind of gory detail too.
 
 If you are just interested in learning about the mechanics of the game itself you can flick straight to \hyperref[sec:first16]{\textcolor{blue}{The First 16 Milliseconds}}, 
