--- a/src/planets/planet1Charset_$40_bits.tex
+++ b/src/planets/planet1Charset_$40_bits.tex
@@ -45,7 +45,7 @@
 	\fill[\BACKGROUNDTWO] (6,0) rectangle ++ (1,1);
 	\fill[\BACKGROUNDTWO] (7,0) rectangle ++ (1,1);
         \node[matrix of math nodes,anchor=south west,inner sep=0pt,
-        nodes={draw,minimum size=1cm,anchor=center},
+        nodes={draw,minimum size=1cm,font=\Huge,anchor=center},
         column sep=-\pgflinewidth,row sep=-\pgflinewidth,font=\huge\ttfamily]
         {
         0 & 0  & 0 & 0 & 0 & 0 & 0 & 0\\
