--- a/src/planets/planet1Charset_$41_bits.tex
+++ b/src/planets/planet1Charset_$41_bits.tex
@@ -69,7 +69,7 @@
         \fill[\BACKGROUNDONE] (6,0) rectangle ++ (1,1);
         \fill[\BACKGROUNDONE] (7,0) rectangle ++ (1,1);
         \node[matrix of math nodes,anchor=south west,inner sep=0pt,
-        nodes={draw,minimum size=1cm,anchor=center},
+        nodes={draw,minimum size=1cm,font=\Huge,anchor=center},
         column sep=-\pgflinewidth,row sep=-\pgflinewidth]
         {1 & 1  & 0 & 0 & 1 & 1 & 0 & 0\\
         1 & 1  & 0 & 0 & 1 & 1 & 1 & 1\\
